@@ -9,10 +9,11 @@ OVERVIEW:
   3 - configuration file
   4 - create a suid cgi wrapper
   5 - [optional] configure access control (http authentication)
-  6 - css stylesheet file
-  7 - final test
-  8 - troubleshooting
-  9 - report problems
+  6 - [optional] configure multi domain support
+  7 - css stylesheet file
+  8 - final test
+  9 - troubleshooting
+ 10 - report problems
 
 
 ------------------------------------------------------------------------------
@@ -123,14 +124,29 @@ OVERVIEW:
 	Again, see the ApacheWeek article for details.
 
 
-6.	Copy the stylesheet file (/usr/local/share/ezmlm-web/css/default.css)
+6.	You may skip this step if you manage only one directory containing mailing
+	lists. For more than one domain or multiple user directories you should
+	follow the instructions below. BEWARE: this is an advanced setting.
+
+	1) copy examples/multidomain.conf.dist to /etc/ezmlm-web/multidomain.conf
+	2) add your mailing list parent directories to this file
+	3) uncomment the respective line in your ezmlmwebrc file
+
+	The web interface should now show a "Change domain" link in the navigation
+	bar to the left.
+
+	Direct links to a specifc domain use the following format:
+		http://BASE_URL/ezmlm-web?domain=foo
+	
+
+7.	Copy the stylesheet file (/usr/local/share/ezmlm-web/css/default.css)
 	to a location of your choice. It has to be accessible by an URL - maybe
 	a place like "/var/www/ezmlm-web.css" could be appropriate.
 	Now you may have to change the "HTML_CSS_FILE" setting in your
 	ezmlmwebrc file. This value is a URL - not the local filename.
 
 
-7.  Test the installation with your favourite web browser. You should be
+8.  Test the installation with your favourite web browser. You should be
 	asked for a username and password (supplied in 6.2) and then be presented
 	with a screen entitled "EZ Mailing List Manger". You can then try to
 	create and edit mailing lists ... Have Fun :)
@@ -139,11 +155,11 @@ OVERVIEW:
 	option correctly in ezmlmwebrc. Check it again.
 
 
-8.	If anything failes - take a look at the web server's error log
+9.	If anything failes - take a look at the web server's error log
 	(e.g. /var/log/apache/error.log).
 
 
-9.	If the error log of your web server did not help you to solve your problem:
+10.	If the error log of your web server did not help you to solve your problem:
 	- take a look at https://systemausfall.org/toolforge/ezmlm-web
 	- send me an email: ezmlm-web@sumpfralle.de
 	- subscribe to the mailinglist: ezmlm-web-subscribe@lists.systemausfall.org
