@@ -1,57 +1,0 @@
-UI	{
-
-	Navigation	{
-		ListSelect	= 1
-		ListCreate	= 1
-		Subscribers	{
-			Subscribers	= 1
-		  }
-
-		Config	{
-			Main		= 1
-		  }
-
-		Gnupg	{
-			PublicKeys	= 1
-			SecretKeys	= 1
-			GenerateKey	= 1
-		  }
-
-		TextEdit	= 1
-		ListDelete	= 1
-		Language	= 1
-		Interface	= 1
-		Help	= 1
-	  }
-
-
-	Options	{
-		
-		GenerateKey {
-			KeyName		= gnupg_keyname
-			KeyComment	= gnupg_keycomment
-			KeySize		= gnupg_keysize
-			KeyExpiration	= gnupg_keyexpires
-		  }
-
-
-		Config	{
-			Main	{
-				#Language	= lang_select
-				#Charset		= charset_select
-				SignMessages	= gnupg_sign_messages
-				EncryptToAll	= gnupg_encrypt_to_all
-				AllowKeySubmission	= gnupg_allow_key_submission
-				NokeyNocrypt	= gnupg_nokey_nocrypt
-				VerifiedKeyReq	= gnupg_verified_key_required
-				RequireSub	= gnupg_require_subscriber
-				requireSigs	= gnupg_require_sigs
-				WebUsers	= webusers
-			  }
-			
-		  }
-
-	  }
-
-  }
-
